dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wil-playground
  name: wil-playground
  namespace: dev
spec:
  selector:
    app: wil-playground
  ports:
    - port: 8080
      targetPort: 8888
      protocol: TCP
